# TSP

./: pyproject.toml  todo.txt
src/: config.py  launcher.py  pygame_sample.py  tsp.py  visualisation.py
src/visualization/: button.py  main_screen.py  setting_screen.py  window.py
tests/: test_tsp.py
