[project]
name = "tsp"
version = "0.1.0"
description = ""
authors = [
    {name = "YukiTanigaki",email = "yuki.tanigaki.s@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyglet (>=2.1.3,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
numpy = "^2.2.3"
matplotlib = "^3.10.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
